refactor: スネークケースとキャメルケースの統一
